--- a/html/www/index.html
+++ b/html/www/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso HTML</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Anatomia HTML</title>
 </head>
 <body>
-     Teste
+  <header>
+    <h1>Exercicios HTML</h1>
+  </header>
+  <nav>
+    <a href="/">Navegação</a>
+  </nav>
+  <section id="conteudo">
+    CONTEUDO DA PAGINA
+  </section>
+  <aside class="">
+    Lateral
+  </aside>
+  <footer>
+    Rodapé
+  </footer>
 </body>
 </html>
