--- a/html/www/poucocss.html
+++ b/html/www/poucocss.html
@@ -5,11 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Um pouco de CSS</title>
+  <style>
+    h1{
+      font-style: 20px;
+    }
+    .fundovermelho{
+      background-color: #c00;
+    }
+    .negrito{
+      font-weight: bold;
+    }
+    #textoprincipal{
+      font-size: 40px;
+      font-weight: bold;
+      color: #fff;
+      background-color: #444;
+      padding: 10px;
+      margin-bottom: 50px;
+    }
+  </style>
 </head>
 <body>
   <h1>CSS</h1>
-  <span id="textoprincipal">Texto1</span><br>
-  <span class="fundovermelho negrito">Texto2</span><br>
+  <span id="textoprincipal">Texto1</span><br><br>
+  <span class="fundovermelho negrito">Texto2</span><br><br>
   <span class="fundovermelho">Texto3</span>
 </body>
 </html>
