--- a/html/www/index.html
+++ b/html/www/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    #conteudo{
+      padding: 30px 0px;
+    }
+    header h1, footer{
+      //text-align: center;
+    }
+    nav a{
+      padding: 0px 10px;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -13,10 +24,10 @@
   <nav>
     <a href="exercicios/teste.html">00-teste</a>
     <a href="exercicios/temp.html">01-Temp</a>
+    <a href="exercicios/texto1.html">02-Texto1</a>
   </nav>
   <section id="conteudo"></section>
   <footer>
-    <br>
     Curso de WEB Moderno
   </footer>
   <script>
