--- a/html/www/index.html
+++ b/html/www/index.html
@@ -25,8 +25,14 @@
     <a href="exercicios/teste.html">00-teste</a>
     <a href="exercicios/temp.html">01-Temp</a>
     <a href="exercicios/texto1.html">02-Texto1</a>
+    <a href="exercicios/listas.html">03-Listas</a>
+    <a href="exercicios/listaaninhada.html">04-Lista Aninhada</a>
+
+
   </nav>
+  <hr>
   <section id="conteudo"></section>
+  <hr>
   <footer>
     Curso de WEB Moderno
   </footer>
