--- a/html/www/exercicios/listaaninhada.html
+++ b/html/www/exercicios/listaaninhada.html
@@ -1,15 +1,18 @@
 <h1>Projeto</h1>
 <ul class="tree">
-  <li>Backend
+  <li>
+    <span wm-folder>Backend</span>
     <ul>
-      <li>app
+      <li>
+        <span wm-folder>app</span>
         <ul>
           <li>produto.js</li>
           <li>usuario.js</li>
           <li>venda.js</li>
         </ul>
       </li>
-      <li>Config
+      <li>
+        <span wm-folder>Config</span>
         <ul>
           <li>banco.js</li>
           <li>rotas.js</li>
@@ -18,9 +21,11 @@
       </li>
     </ul>
   </li>
-  <li>Frontend
+  <li>
+    <span wm-folder>Frontend</span>
     <ul>
-      <li>public
+      <li>
+        <span wm-folder>public</span>
         <ul>
           <li>app.css</li>
           <li>app.js</li>
@@ -32,3 +37,12 @@
 </ul>
 
 <link rel="stylesheet" href="http://files.cod3r.com.br/curso-web/tree.css">
+<script>
+  document.querySelectorAll('[wm-folder]').forEach(folder =>{
+    folder.onclick = function(e){
+      const ul = folder.nextElementSibling
+      const d = ul.style.display
+      ul.style.display = d === 'none' ? 'block' : 'none'
+    }
+  })
+</script>
