--- a/html/www/exercicios/links.html
+++ b/html/www/exercicios/links.html
@@ -1,11 +1,32 @@
-<h1>links</h1>
-<br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  <h1>links</h1>
+  <br>
 
-<!-- URL Absoluta-->
-<a href="https://www.google.com.br">Google1</a><br>
-<a href="https://www.google.com.br" target="blank">Google2</a><br><br>
+  <!-- URL Absoluta-->
+  <a href="https://www.google.com.br">Google1</a><br>
+  <a href="https://www.google.com.br" target="blank">Google2</a><br><br>
 
-<!-- URL Relativas -->
-<a href="index.html">Voltar1</a><br>
-<a href="/index.html">Voltar2</a><br>
-<a href="../index.html">Voltar3</a>
+  <!-- URL Relativas -->
+  <a href="index.html">Voltar1</a><br>
+  <a href="/index.html">Voltar2</a><br>
+  <a href="../index.html">Voltar3</a><br><br>
+
+  <a href="mailto:wanderneguinho@hotmail.com">email me</a><br><br>
+
+  <!-- link para trechos da pagina (id) -->
+<a href="#noticia">Noticia</a>
+  <div id="noticia" style="position:absolute; top: 2000px;">
+    <h1>Noticia Buemba!</h1>
+    <p>Não era nada!!!</p><br><br>
+    <a href="#inicio">Voltar Inicio</a>
+  </div>
+</body>
+</html>
