--- a/html/www/index.html
+++ b/html/www/index.html
@@ -9,11 +9,13 @@
     #conteudo{
       padding: 30px 0px;
     }
-    header h1, footer{
-      //text-align: center;
-    }
     nav a{
       padding: 0px 10px;
+      display: inline-block;
+      text-decoration: none;
+    }
+    footer{
+      text-align: center;
     }
   </style>
 </head>
@@ -22,17 +24,18 @@
     <h1>Exercicios HTML</h1>
   </header>
   <nav>
-    <a href wm-nav="exercicios/teste.html">00-teste</a>
-    <a href wm-nav="exercicios/temp.html">01-Temp</a>
-    <a href wm-nav="exercicios/texto1.html">02-Texto1</a>
-    <a href wm-nav="exercicios/listas.html">03-Listas</a>
-    <a href wm-nav="exercicios/listaaninhada.html">04-Lista Aninhada</a>
+    <a href="exercicios/teste.html">00-teste</a>
+    <a href="exercicios/temp.html">01-Temp</a>
+    <a href="exercicios/texto1.html">02-Texto1</a>
+    <a href="exercicios/listas.html">03-Listas</a>
+    <a href="exercicios/listaaninhada.html">04-Lista Aninhada</a>
     <a href="exercicios/links.html">05-Links</a>
+    <a href="exercicios/tabela.html">06-Tabela</a>
   </nav>
   <hr>
   <section id="conteudo"></section>
-  <hr>
   <footer>
+    <br><br>
     Curso de WEB Moderno
   </footer>
   <script>
