--- a/html/www/exercicios/form/form.html
+++ b/html/www/exercicios/form/form.html
@@ -1,6 +1,7 @@
 <h1>Formulário</h1>
 
 <form action="http://localhost:3003/usuarios" method="POST">
+  <input type="hidden" name="id" value="3">
   <input type="text" name="nome">
   <input type="password" name="senha">
   <textarea name="bio" rows="10" cols="30"></textarea>
@@ -29,7 +30,8 @@
     <option value="c">C/C++</option>
   </select>
 
-  <button>Incluir</button>
+  <button formaction="http://localhost:3003/usuarios">Incluir</button>
+  <button formaction="http://localhost:3003/usuarios/3">Alterar</button>
 </form>
 
 <style>
