--- a/html/www/index.html
+++ b/html/www/index.html
@@ -32,6 +32,7 @@
     <a href="exercicios/links.html">05-Links</a>
     <a href="exercicios/tabela.html">06-Tabela</a>
     <a href="exercicios/form/form.html">07-Formulários</a>
+    <a href="exercicios/imagens.html">08 - imagens</a>
   </nav>
   <hr>
   <section id="conteudo"></section>
