--- a/html/www/index.html
+++ b/html/www/index.html
@@ -33,6 +33,7 @@
     <a href="exercicios/tabela.html">06-Tabela</a>
     <a href="exercicios/form/form.html">07-Formulários</a>
     <a href="exercicios/imagens.html">08 - imagens</a>
+    <a href="exercicios/video.html">09 - Vídeos</a>
   </nav>
   <hr>
   <section id="conteudo"></section>
