--- a/html/www/exercicios/video.html
+++ b/html/www/exercicios/video.html
@@ -1,5 +1,4 @@
-<video src="" id="meuvideo" width="800" height="450" controls autoplay controlsList="nodownload">
-  <source src="http://files.cod3r.com.br/curso-web/video.mp4" type="video/mp4">
+<video src="http://files.cod3r.com.br/curso-web/video.mp4" id="meuvideo" width="800" height="450" controls autoplay controlsList="nodownload">
     Seu browser não suporta a tag vídeo.
 </video>
 
@@ -22,8 +21,28 @@
   .progresso > div {
     background-color: red;
     color: #fff;
-    height: 0%;
+    height: 100%;
     text-align: right;
     font-size: 14px;
+    width: 0%;
   }
 </style>
+
+<script>
+  function configurarVideo(id) {
+      const video = document.getElementById(id)
+      video.oncontextmenu = () => false
+
+      document.querySelector(`[wm-play=${id}]`).onclick = e => video.play()
+      document.querySelector(`[wm-pause=${id}`).onclick = e => video.pause()
+
+      setInterval(() => {
+          const percentual = (video.currentTime / video.duration) * 100
+          const valorDiv = document.querySelector(`[wm-progresso=${id}] > div`)
+          valorDiv.style.width = `${percentual}%`
+          valorDiv.innerHTML = `${percentual.toFixed(1)}%`
+      }, 200)
+  }
+
+  configurarVideo('meuvideo')
+</script>
