--- a/html/www/index.html
+++ b/html/www/index.html
@@ -34,6 +34,7 @@
     <a href="exercicios/form/form.html">07-Formulários</a>
     <a href="exercicios/imagens.html">08 - imagens</a>
     <a href="exercicios/video.html">09 - Vídeos</a>
+    <a href="exercicios/tagsnvisuais.html">10 - Tags não visuais</a>
   </nav>
   <hr>
   <section id="conteudo"></section>
