--- a/css/anatomia.html
+++ b/css/anatomia.html
@@ -5,7 +5,27 @@
     <meta charset="UTF-8">
     <title>Anatomia CSS</title>
     <style>
-        /* ... */
+        .selector{
+          color: #fff;
+          font-size: 30px;
+          text-align: center;
+          border: solid 5px navy;
+          font-family: helvetica, sans-serif;
+          width: calc(100% - 40px);
+          background-color: rgb(34, 153,189);
+          }
+
+        /* Pseudo classe */
+        .selector:hover{
+          background-color: orangered;
+        }
+
+        /* Pseudo elemento */
+        .selector::first-letter{
+          font-size: 60px;
+          font-weight: bold;
+        }
+
     </style>
 </head>
 
