Aula 209 - Especifidade CSS #01

--- a/css/seletores.html
+++ b/css/seletores.html
@@ -6,7 +6,7 @@
     <title>CSS Selectors</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        section > nth-child(even){
+        section > :nth-child(odd){
           color: #ff0;
           background-color: #f77;
         }
