--- a/css/especificidade2.html
+++ b/css/especificidade2.html
@@ -5,7 +5,25 @@
     <meta charset="UTF-8">
     <title>Especificidade CSS</title>
     <style>
-        /* https://specificity.keegan.st/ */
+        /*
+
+            Calculadora de regra de Especificidade
+            https://specificity.keegan.st/
+
+            1. Inline
+            2. Id
+            3. Classe, Pseudo-Classe, atributo
+            4. Elemento, Pseudo-Elemento
+
+        */
+
+        body{ font-size: 40px; }
+        div[wm-cor]{ background-color: darkorange; }
+        div{ background-color: #00B; color: #fff; }
+        div.estilo{ background-color: green; }
+        #unico1, #unico2{ background-color: #000; }
+        div:hover, #unico1:hover {  background-color: purple; }
+
     </style>
 </head>
 
