--- a/css/tamanhoBox.html
+++ b/css/tamanhoBox.html
@@ -6,6 +6,17 @@
     <style>
         body {
             font-size: 45px;
+            margin: 0;
+        }
+
+        div{
+          background-color: deepskyblue;
+          width: 100%;
+          height: 300px;
+          /* padding: 100px; */
+          border: solid 20px;
+          padding: 100px;
+          box-sizing: border-box;
         }
     </style>
 </head>
