Aula 222 - Propriedade float

--- a/css/float.html
+++ b/css/float.html
@@ -16,13 +16,19 @@
         .c2 {
             background-color: green;
         }
-        
+
         .c3 {
             background-color: blue;
         }
 
         .c4 {
             background-color: orange;
+        }
+
+        div{
+          height: 150px;
+          width: 150px;
+          float: left;
         }
     </style>
 </head>
