--- a/css/cores.html
+++ b/css/cores.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <title>Cores</title>
     <style>
-        /* 
+        /*
             https://www.w3schools.com/colors/colors_hsl.asp
-            
+
             https://coolors.co/
             http://paletton.com/
         */
+
+        body{
+          background-color: green;
+          background-color: #00ff00;
+        }
+
     </style>
 </head>
 
