--- a/css/unidades1.html
+++ b/css/unidades1.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <title>Unidades #01</title>
     <style>
-        /* ... */
+        .unidades-absolutas{
+          position: absolute;
+          font-size: 40px;
+          padding: 20px;
+          border: 5px;
+          margin: 30px;
+        }
     </style>
 </head>
 
