--- a/css/unidades1.html
+++ b/css/unidades1.html
@@ -9,8 +9,22 @@
           position: absolute;
           font-size: 40px;
           padding: 20px;
-          border: 5px;
+          border: 5px solid #222;
           margin: 30px;
+          height: 20mm;
+          top: 150px;
+          width: 4cm;
+        }
+        .unidades-relativas{
+          position: absolute;
+          font-size: 4em;
+          padding: 5%;
+          border: solid 1vw #222;
+          margin: .8%;
+          width: 20vw;
+          height: 15vh;
+          bottom: 5%;
+          right: 5%;
         }
     </style>
 </head>
